parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    CTE_BOOL
    EXPRESSION
    LIST
    NOT
    OR
    SIZE
    ST_CTE
    TERM

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON gotomain program1 DAVINCI fillmain block
Rule 2     fillmain -> <empty>
Rule 3     gotomain -> <empty>
Rule 4     program1 -> program1 funcs save_funcs
Rule 5     program1 -> program1 vars global_vars
Rule 6     program1 -> empty
Rule 7     save_funcs -> <empty>
Rule 8     global_vars -> <empty>
Rule 9     block -> LBRACE b1 RBRACE
Rule 10    b1 -> vars local_vars b2
Rule 11    b1 -> b2
Rule 12    local_vars -> <empty>
Rule 13    b2 -> b2 statute
Rule 14    b2 -> empty
Rule 15    vars -> VAR vars2
Rule 16    vars2 -> type save_type vars3 SEMICOLON vars2
Rule 17    vars2 -> empty
Rule 18    vars3 -> ID list savelist vars4
Rule 19    vars3 -> ID saveid vars4
Rule 20    vars4 -> COMMA vars3
Rule 21    vars4 -> empty
Rule 22    savelist -> <empty>
Rule 23    saveid -> <empty>
Rule 24    save_type -> <empty>
Rule 25    list -> LBRACKET CTE_INT RBRACKET
Rule 26    statute -> assignment
Rule 27    statute -> call
Rule 28    statute -> condition
Rule 29    statute -> triangle
Rule 30    statute -> rectangle
Rule 31    statute -> square
Rule 32    statute -> circle
Rule 33    statute -> poligon
Rule 34    statute -> color
Rule 35    statute -> pensize
Rule 36    statute -> penforward
Rule 37    statute -> penback
Rule 38    statute -> rotate
Rule 39    statute -> while
Rule 40    statute -> return
Rule 41    statute -> penon
Rule 42    statute -> penoff
Rule 43    while -> WHILE while_return LPAREN type_check expression RPAREN LBRACE b2 RBRACE end_while
Rule 44    while_return -> <empty>
Rule 45    end_while -> <empty>
Rule 46    assignment -> ID verify_id ASSIGN push_sign expression set_value SEMICOLON
Rule 47    assignment -> ID cte_id LBRACKET exp RBRACKET ASSIGN expression SEMICOLON
Rule 48    verify_id -> <empty>
Rule 49    set_value -> <empty>
Rule 50    cte_id -> <empty>
Rule 51    color_cte -> RED
Rule 52    color_cte -> BLUE
Rule 53    color_cte -> YELLOW
Rule 54    color_cte -> GREEN
Rule 55    color_cte -> PINK
Rule 56    color_cte -> PURPLE
Rule 57    st_cte -> STRING
Rule 58    st_cte -> cte_bool
Rule 59    funcs -> FUNC type ID saveidfunc createcontext LPAREN type save_type ID save_par funcs1 RPAREN LBRACE funcvars statements RBRACE funcs3
Rule 60    funcs -> FUNC VOID ID saveidfunc createcontext LPAREN type save_type ID save_par funcs1 RPAREN LBRACE funcvars statements RBRACE funcs3
Rule 61    funcs1 -> funcs1 COMMA type save_type ID save_par
Rule 62    funcs1 -> empty
Rule 63    statements -> statements statute
Rule 64    statements -> empty
Rule 65    funcs3 -> funcs
Rule 66    funcs3 -> empty
Rule 67    funcvars -> vars local_vars
Rule 68    funcvars -> empty
Rule 69    saveidfunc -> <empty>
Rule 70    createcontext -> <empty>
Rule 71    save_par -> <empty>
Rule 72    color -> COLOR LPAREN color_cte RPAREN SEMICOLON
Rule 73    circle -> CIRCLE LPAREN exp RPAREN SEMICOLON
Rule 74    square -> SQUARE LPAREN exp RPAREN SEMICOLON
Rule 75    triangle -> TRIANGLE LPAREN exp COMMA exp RPAREN SEMICOLON
Rule 76    rectangle -> RECTANGLE LPAREN exp COMMA exp RPAREN SEMICOLON
Rule 77    poligon -> POLIGON LPAREN exp COMMA exp RPAREN SEMICOLON
Rule 78    rotate -> ROTATE LPAREN exp RPAREN SEMICOLON
Rule 79    rotate -> ROTATE LPAREN CTE_STRING RPAREN SEMICOLON
Rule 80    pensize -> PENSIZE LPAREN exp RPAREN SEMICOLON
Rule 81    penforward -> PENFORWARD LPAREN exp RPAREN SEMICOLON
Rule 82    penback -> PENBACK LPAREN exp RPAREN SEMICOLON
Rule 83    penon -> PENON LPAREN RPAREN SEMICOLON
Rule 84    penoff -> PENOFF LPAREN RPAREN SEMICOLON
Rule 85    type -> INT
Rule 86    type -> FLOAT
Rule 87    type -> STRING
Rule 88    type -> BOOL
Rule 89    getarrayvalue -> <empty>
Rule 90    getcallvalue -> <empty>
Rule 91    cte_bool -> TRUE
Rule 92    cte_bool -> FALSE
Rule 93    condition -> IF LPAREN expression RPAREN type_check LBRACE b2 RBRACE condition1 end_if
Rule 94    condition1 -> gotoElse ELSE LBRACE b2 RBRACE
Rule 95    condition1 -> empty
Rule 96    type_check -> <empty>
Rule 97    gotoElse -> <empty>
Rule 98    end_if -> <empty>
Rule 99    expression -> exp expression1
Rule 100   expression1 -> LESSER relop exp top_relop
Rule 101   expression1 -> GREATER relop exp top_relop
Rule 102   expression1 -> EQUAL relop exp top_relop
Rule 103   expression1 -> NOTEQUAL relop exp top_relop
Rule 104   expression1 -> GREATEROREQUAL relop exp top_relop
Rule 105   expression1 -> LESSEROREQUAL relop exp top_relop
Rule 106   expression1 -> empty
Rule 107   exp -> term top_exp exp1
Rule 108   exp1 -> MINUS push_sign exp
Rule 109   exp1 -> PLUS push_sign exp
Rule 110   exp1 -> empty
Rule 111   top_exp -> <empty>
Rule 112   term -> factor top_factor term1
Rule 113   term1 -> DIVIDE push_sign term
Rule 114   term1 -> TIMES push_sign term
Rule 115   term1 -> empty
Rule 116   factor -> LPAREN false_bottom expression RPAREN end_par
Rule 117   factor -> var_cte
Rule 118   factor -> ID push_id
Rule 119   top_factor -> <empty>
Rule 120   var_cte -> ID getidvalue
Rule 121   var_cte -> CTE_INT getvalue_i
Rule 122   var_cte -> CTE_FLOAT getvalue_f
Rule 123   var_cte -> cte_bool getvalue_b
Rule 124   var_cte -> ID list getarrayvalue
Rule 125   var_cte -> call getcallvalue
Rule 126   getidvalue -> <empty>
Rule 127   getvalue_i -> <empty>
Rule 128   getvalue_f -> <empty>
Rule 129   getvalue_b -> <empty>
Rule 130   relop -> <empty>
Rule 131   top_relop -> <empty>
Rule 132   push_sign -> <empty>
Rule 133   false_bottom -> <empty>
Rule 134   end_par -> <empty>
Rule 135   push_id -> <empty>
Rule 136   call -> ID check_name LPAREN create_era call1 RPAREN SEMICOLON gosub
Rule 137   check_name -> <empty>
Rule 138   create_era -> <empty>
Rule 139   gosub -> <empty>
Rule 140   call1 -> ID COMMA call1
Rule 141   call1 -> exp
Rule 142   call1 -> st_cte
Rule 143   return -> RETURN var_cte SEMICOLON
Rule 144   return -> RETURN st_cte SEMICOLON
Rule 145   empty -> <empty>

Terminals, with rules where they appear

AND                  : 
ASSIGN               : 46 47
BLUE                 : 52
BOOL                 : 88
CIRCLE               : 73
COLOR                : 72
COMMA                : 20 61 75 76 77 140
CTE_BOOL             : 
CTE_FLOAT            : 122
CTE_INT              : 25 121
CTE_STRING           : 79
DAVINCI              : 1
DIVIDE               : 113
ELSE                 : 94
EQUAL                : 102
EXPRESSION           : 
FALSE                : 92
FLOAT                : 86
FUNC                 : 59 60
GREATER              : 101
GREATEROREQUAL       : 104
GREEN                : 54
ID                   : 1 18 19 46 47 59 59 60 60 61 118 120 124 136 140
IF                   : 93
INT                  : 85
LBRACE               : 9 43 59 60 93 94
LBRACKET             : 25 47
LESSER               : 100
LESSEROREQUAL        : 105
LIST                 : 
LPAREN               : 43 59 60 72 73 74 75 76 77 78 79 80 81 82 83 84 93 116 136
MINUS                : 108
NOT                  : 
NOTEQUAL             : 103
OR                   : 
PENBACK              : 82
PENFORWARD           : 81
PENOFF               : 84
PENON                : 83
PENSIZE              : 80
PINK                 : 55
PLUS                 : 109
POLIGON              : 77
PROGRAM              : 1
PURPLE               : 56
RBRACE               : 9 43 59 60 93 94
RBRACKET             : 25 47
RECTANGLE            : 76
RED                  : 51
RETURN               : 143 144
ROTATE               : 78 79
RPAREN               : 43 59 60 72 73 74 75 76 77 78 79 80 81 82 83 84 93 116 136
SEMICOLON            : 1 16 46 47 72 73 74 75 76 77 78 79 80 81 82 83 84 136 143 144
SIZE                 : 
SQUARE               : 74
STRING               : 57 87
ST_CTE               : 
TERM                 : 
TIMES                : 114
TRIANGLE             : 75
TRUE                 : 91
VAR                  : 15
VOID                 : 60
WHILE                : 43
YELLOW               : 53
error                : 

Nonterminals, with rules where they appear

assignment           : 26
b1                   : 9
b2                   : 10 11 13 43 93 94
block                : 1
call                 : 27 125
call1                : 136 140
check_name           : 136
circle               : 32
color                : 34
color_cte            : 72
condition            : 28
condition1           : 93
create_era           : 136
createcontext        : 59 60
cte_bool             : 58 123
cte_id               : 47
empty                : 6 14 17 21 62 64 66 68 95 106 110 115
end_if               : 93
end_par              : 116
end_while            : 43
exp                  : 47 73 74 75 75 76 76 77 77 78 80 81 82 99 100 101 102 103 104 105 108 109 141
exp1                 : 107
expression           : 43 46 47 93 116
expression1          : 99
factor               : 112
false_bottom         : 116
fillmain             : 1
funcs                : 4 65
funcs1               : 59 60 61
funcs3               : 59 60
funcvars             : 59 60
getarrayvalue        : 124
getcallvalue         : 125
getidvalue           : 120
getvalue_b           : 123
getvalue_f           : 122
getvalue_i           : 121
global_vars          : 5
gosub                : 136
gotoElse             : 94
gotomain             : 1
list                 : 18 124
local_vars           : 10 67
penback              : 37
penforward           : 36
penoff               : 42
penon                : 41
pensize              : 35
poligon              : 33
program              : 0
program1             : 1 4 5
push_id              : 118
push_sign            : 46 108 109 113 114
rectangle            : 30
relop                : 100 101 102 103 104 105
return               : 40
rotate               : 38
save_funcs           : 4
save_par             : 59 60 61
save_type            : 16 59 60 61
saveid               : 19
saveidfunc           : 59 60
savelist             : 18
set_value            : 46
square               : 31
st_cte               : 142 144
statements           : 59 60 63
statute              : 13 63
term                 : 107 113 114
term1                : 112
top_exp              : 107
top_factor           : 112
top_relop            : 100 101 102 103 104 105
triangle             : 29
type                 : 16 59 59 60 61
type_check           : 43 93
var_cte              : 117 143
vars                 : 5 10 67
vars2                : 15 16
vars3                : 16 20
vars4                : 18 19
verify_id            : 46
while                : 39
while_return         : 43

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON gotomain program1 DAVINCI fillmain block

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON gotomain program1 DAVINCI fillmain block

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON gotomain program1 DAVINCI fillmain block

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . gotomain program1 DAVINCI fillmain block
    (3) gotomain -> .

    DAVINCI         reduce using rule 3 (gotomain -> .)
    FUNC            reduce using rule 3 (gotomain -> .)
    VAR             reduce using rule 3 (gotomain -> .)

    gotomain                       shift and go to state 5

state 5

    (1) program -> PROGRAM ID SEMICOLON gotomain . program1 DAVINCI fillmain block
    (4) program1 -> . program1 funcs save_funcs
    (5) program1 -> . program1 vars global_vars
    (6) program1 -> . empty
    (145) empty -> .

    DAVINCI         reduce using rule 145 (empty -> .)
    FUNC            reduce using rule 145 (empty -> .)
    VAR             reduce using rule 145 (empty -> .)

    program1                       shift and go to state 6
    empty                          shift and go to state 7

state 6

    (1) program -> PROGRAM ID SEMICOLON gotomain program1 . DAVINCI fillmain block
    (4) program1 -> program1 . funcs save_funcs
    (5) program1 -> program1 . vars global_vars
    (59) funcs -> . FUNC type ID saveidfunc createcontext LPAREN type save_type ID save_par funcs1 RPAREN LBRACE funcvars statements RBRACE funcs3
    (60) funcs -> . FUNC VOID ID saveidfunc createcontext LPAREN type save_type ID save_par funcs1 RPAREN LBRACE funcvars statements RBRACE funcs3
    (15) vars -> . VAR vars2

    DAVINCI         shift and go to state 8
    FUNC            shift and go to state 11
    VAR             shift and go to state 12

    funcs                          shift and go to state 9
    vars                           shift and go to state 10

state 7

    (6) program1 -> empty .

    DAVINCI         reduce using rule 6 (program1 -> empty .)
    FUNC            reduce using rule 6 (program1 -> empty .)
    VAR             reduce using rule 6 (program1 -> empty .)


state 8

    (1) program -> PROGRAM ID SEMICOLON gotomain program1 DAVINCI . fillmain block
    (2) fillmain -> .

    LBRACE          reduce using rule 2 (fillmain -> .)

    fillmain                       shift and go to state 13

state 9

    (4) program1 -> program1 funcs . save_funcs
    (7) save_funcs -> .

    DAVINCI         reduce using rule 7 (save_funcs -> .)
    FUNC            reduce using rule 7 (save_funcs -> .)
    VAR             reduce using rule 7 (save_funcs -> .)

    save_funcs                     shift and go to state 14

state 10

    (5) program1 -> program1 vars . global_vars
    (8) global_vars -> .

    DAVINCI         reduce using rule 8 (global_vars -> .)
    FUNC            reduce using rule 8 (global_vars -> .)
    VAR             reduce using rule 8 (global_vars -> .)

    global_vars                    shift and go to state 15

state 11

    (59) funcs -> FUNC . type ID saveidfunc createcontext LPAREN type save_type ID save_par funcs1 RPAREN LBRACE funcvars statements RBRACE funcs3
    (60) funcs -> FUNC . VOID ID saveidfunc createcontext LPAREN type save_type ID save_par funcs1 RPAREN LBRACE funcvars statements RBRACE funcs3
    (85) type -> . INT
    (86) type -> . FLOAT
    (87) type -> . STRING
    (88) type -> . BOOL

    VOID            shift and go to state 17
    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    STRING          shift and go to state 20
    BOOL            shift and go to state 21

    type                           shift and go to state 16

state 12

    (15) vars -> VAR . vars2
    (16) vars2 -> . type save_type vars3 SEMICOLON vars2
    (17) vars2 -> . empty
    (85) type -> . INT
    (86) type -> . FLOAT
    (87) type -> . STRING
    (88) type -> . BOOL
    (145) empty -> .

    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    STRING          shift and go to state 20
    BOOL            shift and go to state 21
    DAVINCI         reduce using rule 145 (empty -> .)
    FUNC            reduce using rule 145 (empty -> .)
    VAR             reduce using rule 145 (empty -> .)
    ID              reduce using rule 145 (empty -> .)
    IF              reduce using rule 145 (empty -> .)
    TRIANGLE        reduce using rule 145 (empty -> .)
    RECTANGLE       reduce using rule 145 (empty -> .)
    SQUARE          reduce using rule 145 (empty -> .)
    CIRCLE          reduce using rule 145 (empty -> .)
    POLIGON         reduce using rule 145 (empty -> .)
    COLOR           reduce using rule 145 (empty -> .)
    PENSIZE         reduce using rule 145 (empty -> .)
    PENFORWARD      reduce using rule 145 (empty -> .)
    PENBACK         reduce using rule 145 (empty -> .)
    ROTATE          reduce using rule 145 (empty -> .)
    WHILE           reduce using rule 145 (empty -> .)
    RETURN          reduce using rule 145 (empty -> .)
    PENON           reduce using rule 145 (empty -> .)
    PENOFF          reduce using rule 145 (empty -> .)
    RBRACE          reduce using rule 145 (empty -> .)

    vars2                          shift and go to state 22
    type                           shift and go to state 23
    empty                          shift and go to state 24

state 13

    (1) program -> PROGRAM ID SEMICOLON gotomain program1 DAVINCI fillmain . block
    (9) block -> . LBRACE b1 RBRACE

    LBRACE          shift and go to state 26

    block                          shift and go to state 25

state 14

    (4) program1 -> program1 funcs save_funcs .
